@@ -9,6 +9,7 @@ o Fix so identifiers created inside a foreach can be used by other statements in
 o Fix for problems when using patterns with multiple unnamed nodes
 o Fixes problems when doing ORDER BY ... LIMIT x. When x is larger than the input set, sorting was never done.
 o Fixes problems when updating a graph element with a map containing null values
+o Made it possible to delete a collection
 
 1.9.M01 (2012-10-23)
 --------------------
